gccida/c2/mark_set_regs
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2904:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v5.rtwint = ( __int64)insn[3].fld[0]; v5.rtwint; v5.rtwint = *( __int64 *)( v5.rtwint + 16) ) 
                            ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2912:31: error: expected expression
mark_set_1( pbi, SET, *( rtx *)( v5.rtwint + 8), rtx, insn, pbi->flags); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2923:12: error: expected ';' after expression
v4 = ( rtx)v4[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2945:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
mark_set_1( pbi, ( rtx_code)( unsigned __int16)v12, *( ( rtx *)v11 + 1), v7, insn, pbi->flags); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2945:31: error: expected expression
mark_set_1( pbi, ( rtx_code)( unsigned __int16)v12, *( ( rtx *)v11 + 1), v7, insn, pbi->flags); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2945:63: error: expected expression
mark_set_1( pbi, ( rtx_code)( unsigned __int16)v12, *( ( rtx *)v11 + 1), v7, insn, pbi->flags); 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2956:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
mark_set_1( pbi, ( rtx_code)( unsigned __int16)v8, v4->fld[0].rtx, v7, insn, pbi->flags); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/flow.c:2956:31: error: expected expression
mark_set_1( pbi, ( rtx_code)( unsigned __int16)v8, v4->fld[0].rtx, v7, insn, pbi->flags); 
                              ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_regs/src/obj/flow.o] Error 1
